@@ -1,6 +1,6 @@
 // -*- C++ -*-
 
-// Copyright (C) 2007, 2008, 2009 Free Software Foundation, Inc.
+// Copyright (C) 2007, 2008, 2009, 2010 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the terms
@@ -135,7 +135,7 @@ namespace __gnu_parallel
 	std::swap(*__pivot_pos, *(__end - 1));
       __pivot_pos = __end - 1;
 
-      __gnu_parallel::binder2nd<_Compare, _ValueType, _ValueType, bool>
+      __gnu_parallel::__binder2nd<_Compare, _ValueType, _ValueType, bool>
 	__pred(__comp, *__pivot_pos);
 
       // Divide, returning __end - __begin - 1 in the worst case.
@@ -287,7 +287,7 @@ namespace __gnu_parallel
         	std::swap(*__pivot_pos, *(__end - 1));
               __pivot_pos = __end - 1;
 
-              __gnu_parallel::binder2nd
+              __gnu_parallel::__binder2nd
 		<_Compare, _ValueType, _ValueType, bool>
 		__pred(__comp, *__pivot_pos);
 
